# Flowmatch-AI-Recommendation-System-Code

./: .env.example  .gitignore  Makefile  PROJECT_PROGRESS.md  README.md  TECHNICAL_WALKTHROUGH.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Vercel Folder/: README.md  package.json
Vercel Folder/src/app/: globals.css  page.tsx
Vercel Folder/src/lib/: api.ts
frontend/: package-lock.json
frontend/src/app/: layout.tsx
frontend/src/lib/: types.ts
infra/k8s/: api-gateway.yaml  configmap.yaml  event-collector.yaml  llm-augment-svc.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  qdrant.yaml  ranking-svc.yaml  redis.yaml  secrets.yaml  user-feature-svc.yaml
infra/prometheus/: prometheus.yml
scripts/: download_models.py  evaluate.py  evaluate_pipeline_v2.py  evaluate_two_tower.py  generate_synthetic_data.py
services/api_gateway/: Dockerfile
services/api_gateway/app/: main.py
services/candidate_svc/app/: pipeline.py  (+2 more)
services/event_collector/: Dockerfile
services/llm_augment_svc/: Dockerfile
services/ranking_svc/: Dockerfile
services/user_feature_svc/: Dockerfile
shared/config/: __init__.py  settings.py
shared/schemas/: __init__.py  item.py  recommendation.py  user.py
shared/utils/: __init__.py  logging.py  metrics.py
tests/e2e/: test_service_pipeline.py
tests/integration/: test_event_collector.py  test_llm_augment_svc.py  test_user_feature_svc.py
tests/unit/: test_config.py  test_event_producer.py  test_feature_store.py  test_llm_client.py  test_schemas.py
(+32 files in other folders)
